--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -954,8 +954,8 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 120px;
-  border-radius: 50%;
+  width: 50%;
+  
   border: 4px solid #fff;
   margin: 0 auto;
 }
